# cch-python-slack

./: README.md  pyproject.toml
.github/workflows/: main.yml  main.yml.exam
src/: app.py  main.py  playwright_test.py  weather_info.py  weather_info_parser.py
